# ddd-cqrs-es

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SKILLS.md
.agents/skills/leptos-wasi-cqrs/: SKILL.md
.github/workflows/: ci-watchdog.yml  ci.yml
docs/: PRD.md  README.md  docs.json  getting-started.md  index.md  persistence.md
docs/config-app/: assembly.md  event-store.md  simple-query.md
docs/production/: axum-integration.md  db-query-patterns.md  metadata.md  persisted-store.md  persisted-views.md  redis.md  troubleshooting.md  upcasters.md
docs/testing/: complex-logic.md
docs/theory/: cqrs.md  ddd.md  event-sourcing.md  queries.md  state-changes.md
docs/tutorial/: aggregate.md  commands.md  errors.md  events.md  leptos-ssr.md
examples/: bank_account.rs
examples/counter-app/: .env.example  Cargo.toml  Makefile  README.md  spin.redis.toml  spin.toml
examples/counter-app/redis-trigger/: Cargo.toml
examples/counter-app/redis-trigger/src/: lib.rs
examples/counter-app/scripts/: reset_db.sh
examples/counter-app/src/: app.rs  main.rs  server.rs  store.rs
scripts/: ci-check.sh  verify-docs-rust.sh  verify-docs.sh
src/: adapters.rs  aggregate.rs  async_api.rs  error.rs  event.rs  event_store.rs  idempotency.rs  lib.rs  memory.rs  metadata.rs  mysql.rs  postgres.rs  process_manager.rs  projection.rs  redis.rs  repository.rs  schema.rs  snapshot.rs  sql_common.rs  sqlite.rs  store.rs  testing.rs  upcast.rs
tests/: framework.rs
