[package]
name = "ddd_cqrs_es"
version = "0.1.0"
edition = "2021"
authors = ["Uriah G"]
description = "A lightweight DDD, CQRS, and Event Sourcing framework for Rust"
license = "MIT"
repository = "https://example.com/ddd_cqrs_es"
keywords = ["ddd", "cqrs", "event-sourcing", "events"]
categories = ["development-tools", "rust-patterns"]

[lib]
name = "ddd_cqrs_es"
path = "src/lib.rs"

[features]
default = ["std", "uuid"]
std = []
async = ["dep:async-trait"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }
