[package]
name = "counter_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Leptos application running as a WASIp3 Component"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
bytes = "1.7.2"
console_error_panic_hook = "0.1"
futures = "0.3.30"
hydration_context = { version = "0.3.0" }
leptos = { version = "0.8.19" }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }
leptos_wasi = { version = "0.3.1", default-features = false, features = ["wasip3"], optional = true }
server_fn = { version = "0.8.12", features = ["axum-no-default"] }
spin-sdk = { version = "6.0.0", optional = true }
http = "1.1.0"
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
wasip3 = { version = "0.6.0", features = ["http-compat"], optional = true }
wit-bindgen = { version = "0.57.1", features = ["inter-task-wakeup"], optional = true }
wasm-bindgen = { version = "=0.2.125", optional = true }
web-sys = { version = "0.3", features = ["EventSource", "EventTarget", "MessageEvent", "Storage", "Window"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
async-trait = "0.1"
ddd_cqrs_es = { path = "../../", default-features = false, features = ["json", "serde", "async"] }
rustls = { version = "0.23.12", default-features = false, features = ["std", "tls12"], optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
webpki-roots = { version = "0.26.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
hmac = { version = "0.12.1", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
base64 = { version = "0.22.1", optional = true }


[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:wit-bindgen",
  "dep:http-body",
  "dep:http-body-util",
]
sqlite = [
  "ssr",
  "dep:spin-sdk",
  "ddd_cqrs_es/spin-sqlite",
]
postgres = [
  "ssr",
  "dep:rustls",
  "dep:rustls-rustcrypto",
  "dep:webpki-roots",
  "dep:sha2",
  "dep:hmac",
  "dep:pbkdf2",
  "dep:base64",
  "dep:spin-sdk",
  "ddd_cqrs_es/wasi-postgres-tcp",
  "ddd_cqrs_es/spin-postgres",
]
neon = [
  "ssr",
  "ddd_cqrs_es/wasi-neon",
]
libsql = [
  "ssr",
  "ddd_cqrs_es/wasi-libsql",
]
supabase = [
  "ssr",
  "ddd_cqrs_es/wasi-supabase-rpc",
]
redis = [
  "ssr",
  "ddd_cqrs_es/redis",
]
spin-redis = [
  "redis",
  "dep:spin-sdk",
  "ddd_cqrs_es/spin-redis",
]
wasi-redis = [
  "redis",
  "ddd_cqrs_es/wasi-redis",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "counter_app"
tailwind-input-file = "input.css"
assets-dir = "public"

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-target-dir = "target/server"
