[package]
name = "counter_app_redis_trigger"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = { version = "6.0.0", features = ["redis"] }
